# lockstar

./: .gitignore  README.md  UnitTest.py  analyzescan.py  controlgui.py  linearize.py  openocd.cfg  plotscan.py
Controller GUI/: gui.py  start.bat
Microcontroller/: cppmain - Copy.cpp  improvements
Microcontroller/PL/MCLock_PL/: .cproject  .mxproject  .project
Microcontroller/workspace_1.1.0/MCLock/: .cproject  MCLock Release.launch
Microcontroller/workspace_1.1.0/PhilipsTemporaryTestProject/: .cproject  .mxproject  .project  PhilipsTemporaryTestProject Debug.launch  PhilipsTemporaryTestProject.ioc  STM32F427ZITX_FLASH.ld  STM32F427ZITX_RAM.ld
Share/: MCLock.elf  analyzescan.py  gui.py  latest.elf  libhidapi-hidraw0_0.9.0+dfsg-1_armhf.deb  libjaylink0_0.1.0-3_armhf.deb  openocd_0.10.0-5_armhf.deb  python-twisted-bin_18.9.0-3_armhf.deb  python-zope.interface_4.3.2-1+b2_armhf.deb  test_plot_animation2.py  trace_analysis.py
Share/LockStar/: CavityStar.py  MatrixServer.py  UnitTest.py  analyzescan.py  config.txt  controlgui.py  macros.py  reset.py  spi.py
Share/MicrocontrollerPrograms/: MCLock.elf  MCLock_PL.elf
Share/old_versions/LockStar_before28052020/: cavity_waypoints.py  config.txt  controlgui.py  linearize.py  macros.py  scrollingplot.py  settings.py  spi.py
Share/old_versions/LockStar_old/: FrequencyStar.py  config - Copy.txt  config.txt  config_24042020.txt  daclog.txt  last_scan.txt  linearize.py  macros.py  openocd.cfg  settings.py  spi.py  spi_speedtest.py  test_filters.py
Share/old_versions/LockStar_pre16062020/: FrequencyStar.py  NameServer.py  (+7 more)
Share/trace analysis/: analyzescan.py
code/: python_doc_generator.py
code/general/: setup.py
code/mc/: mc_compilation.py
code/mc/dev/: .clang-format  .mxproject  CMakeLists.txt  Makefile  STM32H725ZGTX_FLASH.ld  dev.ioc  startup_stm32h725xx.s
code/mc/dev/Core/HAL/: ADCDevice.cpp  ADCDevice.hpp  BasicTimer.cpp  BasicTimer.hpp  DACDevice.cpp  DACDevice.hpp  DMAstm.hpp  SPIDMAHandler.cpp  SPIDMAHandler.hpp  SPI_BM.h  dma.cpp  dma.hpp  leds.cpp  leds.hpp  raspberrypi.cpp  raspberrypi.hpp  rpi.cpp  rpi.h  spi.cpp  spi.hpp
code/mc/dev/Core/Inc/: BipBuffer.h  bbbuffers.h  lock.hpp  main.h  misc_func.hpp  ringbuffer.h  stm32_assert.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
code/mc/dev/Core/Lib/: BufferBaseModule.cpp  BufferBaseModule.h  LinearizableDAC.cpp  LinearizableDAC.h  Module.cpp  Module.h  RPIDataPackage.cpp  RPIDataPackage.h  Scope.cpp  Scope.h  ScopeModule.cpp  ScopeModule.h  pid.cpp
code/mc/dev/Core/Modules/: AITestModule.cpp  AOTestModule.cpp  AWGModule.cpp  AWGPIDModule.cpp  AnalogOutputModule.cpp  BufferBaseModule.cpp  BufferBaseModule.h  CORDICTest.cpp  FGModule.cpp  IOTestModule.cpp  LedModule.cpp  LinearizationModule.cpp  Module.cpp  Module.h  RPITestModule.cpp  SPITestModuleHAL.cpp  SPITestModuleLL.cpp  ScopeModule.cpp  ScopeModule.h  SinglePIDModule.cpp  TIMTestModule.cpp  TestModule.cpp  dac_config.h
code/mc/dev/Core/Src/: FFTCorrection.cpp  cppmain.cpp  lock.cpp  main.c  misc_func.cpp  ringbuffer.c  runtime.h  stm32h7xx_hal_msp.c  stm32h7xx_it.c  system_stm32h7xx.c
code/mc/dev/Core/config/: adc_config.h  config.h  dac_config.h  dma_config.h  gauss.h  rpi_config.h  sin2_wave.h  sin_wave.h
code/mc/dev/data/: gen_data.py
doc/python_doc/: SamplingRate.html  index.html  search.js
hardware/: .gitignore
hardware/simulations/: LTC4221.asc
mc/: MCLock.elf
mc/MCLock/: .cproject  .mxproject  .project  MCLock Debug.launch  MCLock Release.launch  MCLock.ioc  STM32F427ZITX_FLASH.ld  STM32F427ZITX_RAM.ld
rpi/python/: CavityStar.py  DoublePID.py  MatrixServer.py  MatrixServer_v2.py  NameServer.py  PowerStar.py  PowerStar2.py  autopid.py  basic_communication.py  basic_communication_v2.py  cavity_waypoints.py  config.txt  controlgui.py  linearize.py  macros.py  openocd.cfg  scope.py  spi.py
web/: README.md  package-lock.json  package.json
web/api/: api.py  requirements.txt
web/public/: index.html
web/src/: routes.tsx
(+636 files in other folders)
